@@ -79,6 +79,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="amount_to_pay"/>
             <field name="payment_lines" colspan="4"
                 view_ids="account_invoice.move_line_view_list_payment"/>
+            <field name="reconciliation_lines" colspan="4" view_ids="account_invoice.move_line_view_list_payment"/>
         </page>
     </notebook>
     <field name="party_lang" invisible="1" colspan="6"/>
