@@ -1,3 +1,4 @@
+* Show reconciliation lines as payment lines
 * Fill in origin of move line
 * Remove partial payment when cancel
 * Set cancel state when credit with refund
